--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 4000
-DB_CONNECTION = "mongodb://127.0.0.1:27017/hesotomotiv"
+DB_CONNECTION = "mongodb+srv://hesotomotiv34:Hes-otomotiv-02166301616@hesotomotiv.izxf0dk.mongodb.net/?retryWrites=true&w=majority"
