--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   react-app:
     build:
-      context: .
+      context: ./client
       dockerfile: Dockerfile
     ports:
       - '80:3000'
