--- a/client/app.config.json
+++ b/client/app.config.json
@@ -1,10 +1,10 @@
 {
-    "apps:":[
+    "apps": [
         {
-            "name":"client",
-            "script":"npx",
-            "interpreter":"none",
-            "args":"serve -s build -p 3000"
+            "name": "client",
+            "script": "npx",
+            "interpreter": "none",
+            "args": "serve -s build -p 3005"
         }
     ]
 }
