--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "proxy": "https://server.hes-otomotiv.com",
+  "proxy": "http://localhost:4000",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -25,7 +25,7 @@
     "webpack": "^5.92.1"
   },
   "scripts": {
-    "start": "PORT=3005 react-scripts start",
+    "start": "PORT=3005 react-scripts build && PORT=3005 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
